메인화면에 임시로 홈피드로 가는 버튼 추가

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,6 +41,12 @@
             style="@style/ThemeOverlay.MyTextDetail"
             tools:text="Firebase User ID: 123456789abc" />
 
+        <Button
+            android:id="@+id/btn_homefeed"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Go HomeFeed" />
+
     </LinearLayout>
 
 
