--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".HomeFeed">
 
     <LinearLayout
         android:id="@+id/topLayout"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="200dp"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,20 +19,21 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:elevation="10dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/menu"
                 android:layout_width="40dp"
                 android:layout_height="wrap_content"
-                android:background="@drawable/menu"/>
+                android:background="@drawable/menu" />
 
             <ImageView
                 android:id="@+id/simpleLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="false"
                 android:layout_centerInParent="true"
+                android:adjustViewBounds="false"
                 android:background="@drawable/simple_logo" />
 
             <Button
@@ -39,61 +41,98 @@
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/option"
-                android:background="@drawable/search"/>
+                android:background="@drawable/search" />
 
             <Button
                 android:id="@+id/option"
-                android:layout_width="20dp"
+                android:layout_width="25dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
-                android:background="@drawable/option"/>
+                android:background="@drawable/option" />
+
+            <Button
+                android:id="@+id/add"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/menu"
+                android:text="글쓰기" />
 
         </RelativeLayout>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:textSize="18dp"
-            android:textColor="@color/light_olive_green"
-            android:lineSpacingExtra="0.7sp"
             android:gravity="center"
-            tools:text="아주대 자취생들의 모임"
-            />
+            android:lineSpacingExtra="0.7sp"
+            android:textColor="@color/light_olive_green"
+            android:textSize="18sp"
+            android:visibility="visible"
+            tools:text="아주대 자취생들의 모임" />
 
-        <LinearLayout
+        <HorizontalScrollView
+            android:id="@+id/categories"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_height="match_parent">
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginLeft="25dp"
-                android:background="@drawable/recipies" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button2"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/roominfo"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/button3"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/schoolact"/>
+                    <Button
+                        android:id="@+id/button"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/recipies" />
 
-            <Button
-                android:id="@+id/button4"
-                android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:layout_marginLeft="20dp"
-                android:background="@drawable/tips"/>
-        </LinearLayout>
+                    <Button
+                        android:id="@+id/button2"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/roominfo" />
 
+                    <Button
+                        android:id="@+id/button3"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/schoolact" />
+
+                    <Button
+                        android:id="@+id/button4"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/tips" />
+
+                    <Button
+                        android:id="@+id/button5"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/tips" />
+
+                    <Button
+                        android:id="@+id/button6"
+                        android:layout_width="75dp"
+                        android:layout_height="75dp"
+                        android:layout_marginStart="20dp"
+                        android:background="@drawable/tips" />
+                </LinearLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/feeds"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
