--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -50,12 +50,6 @@
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/option" />
 
-            <Button
-                android:id="@+id/addpost"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/menu"
-                android:text="글쓰기" />
 
         </RelativeLayout>
 
@@ -133,6 +127,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/feeds"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/topLayout"/>
 
-</LinearLayout>
+    <Button
+        android:id="@+id/addpost"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@drawable/addpost"
+        android:layout_alignRight="@id/feeds"
+        android:layout_alignBottom="@id/feeds"/>
+</RelativeLayout>
