카테고리 프래그먼트(java, xml 파일) 생성 (각 프래그먼트마다 임의의 리스트 만들어놓음)

--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -46,11 +46,11 @@
                     android:text="Write here" />
             </LinearLayout>
             <TextView
-                android:id="@+id/nickname"
+                android:id="@+id/userId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/postedImage"
-                android:text="Nickname"
+                android:text="UserID"
                 android:layout_margin="5dp"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
