--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -17,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <RelativeLayout
+            android:id="@+id/actionbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="10dp"
@@ -79,32 +80,36 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/cook"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="20dp"
-                        android:background="@drawable/recipies" />
+                        android:background="@drawable/recipies"
+                        android:onClick="selectCategory" />
 
                     <Button
-                        android:id="@+id/button2"
+                        android:id="@+id/room"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="20dp"
-                        android:background="@drawable/roominfo" />
+                        android:background="@drawable/roominfo"
+                        android:onClick="selectCategory" />
 
                     <Button
-                        android:id="@+id/button3"
+                        android:id="@+id/activities"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="20dp"
-                        android:background="@drawable/schoolact" />
+                        android:background="@drawable/schoolact"
+                        android:onClick="selectCategory" />
 
                     <Button
-                        android:id="@+id/button4"
+                        android:id="@+id/tips"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="20dp"
-                        android:background="@drawable/tips" />
+                        android:background="@drawable/tips"
+                        android:onClick="selectCategory" />
 
                     <Button
                         android:id="@+id/button5"
@@ -124,17 +129,19 @@
         </HorizontalScrollView>
     </LinearLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/feeds"
+    <FrameLayout
+        android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/topLayout"/>
+        android:layout_below="@+id/topLayout">
+    </FrameLayout>
 
     <Button
         android:id="@+id/addpost"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:background="@drawable/addpost"
-        android:layout_alignRight="@id/feeds"
-        android:layout_alignBottom="@id/feeds"/>
+        android:layout_alignRight="@id/fragment_container"
+        android:layout_alignBottom="@id/fragment_container"/>
+
 </RelativeLayout>
