--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -55,6 +55,7 @@
         </RelativeLayout>
 
         <TextView
+            android:id="@+id/school"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:gravity="center"
