build.gradle 에 bootstrap implementation 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="grey_100">#F5F5F5</color>
     <color name="white">#ffffff</color>
     <color name="grey_300">#ffffff</color>
-    <color name="grey_500">#9E9E9E</color>
+    <color name="grey_500">#9e9e9e</color>
     <color name="light_olive_green">#97c255</color>
 
 </resources>
