recyclerView item에 시간 추가, 시간 설정 24시 형태로 수정

--- a/app/src/main/res/layout/item_feeds.xml
+++ b/app/src/main/res/layout/item_feeds.xml
@@ -45,13 +45,36 @@
                     android:text="Write here" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/userId"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/postedImage"
-                android:layout_margin="5dp"
-                android:text="UserID" />
+                android:layout_below="@id/postedImage"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/userId"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="3"
+                    android:text="UserID" />
+
+                <TextView
+                    android:id="@+id/time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_weight="2"
+                    android:text="Time" />
+
+            </LinearLayout>
+
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
