detailed post body margin 더 안쪽으로 수정

--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -90,7 +90,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
                         android:layout_marginRight="5dp"
-                        android:text="TextView" />
+                        android:text="Tme" />
 
                     <TextView
                         android:id="@+id/dp_body"
@@ -98,8 +98,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
                         android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
                         android:text="body"
                         android:textSize="15sp"
                         android:textStyle="normal" />
