--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -6,35 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:id="@+id/actionbar"
+    <include
+        android:id="@+id/header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/menu"
-            android:layout_width="40dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/menu" />
-
-        <ImageView
-            android:id="@+id/simpleLogo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:adjustViewBounds="false"
-            android:background="@drawable/simple_logo" />
-
-        <Button
-            android:id="@+id/search"
-            android:layout_width="50dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/search" />
-
-    </RelativeLayout>
+        layout="@layout/action_bar"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
