detailed_post 액티비티에서 자기가 쓴 글만 삭제버튼 활성화, 삭제기능 구현

--- a/app/src/main/res/layout/activity_detailed_post.xml
+++ b/app/src/main/res/layout/activity_detailed_post.xml
@@ -80,8 +80,19 @@
                         android:text="body"
                         android:textSize="15sp"
                         android:textStyle="normal" />
+
+                    <Button
+                        android:id="@+id/postDelete"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorAccent"
+                        android:onClick="deletePostAffirm"
+                        android:text="삭제하기"
+                        android:visibility="gone" />
+
                 </LinearLayout>
             </android.support.v7.widget.CardView>
+
         </LinearLayout>
     </ScrollView>
 
