카테고리 선택 버튼에 음식점 추천 버튼 생성

--- a/app/src/main/res/layout/activity_homefeed.xml
+++ b/app/src/main/res/layout/activity_homefeed.xml
@@ -88,11 +88,12 @@
                         android:onClick="selectCategory" />
 
                     <Button
-                        android:id="@+id/button5"
+                        android:id="@+id/eatout"
                         android:layout_width="75dp"
                         android:layout_height="75dp"
                         android:layout_marginStart="20dp"
-                        android:background="@drawable/tips" />
+                        android:background="@drawable/eatout"
+                        android:onClick="selectCategory" />
 
                     <Button
                         android:id="@+id/button6"
