--- a/app/src/main/res/layout/home_fragments.xml
+++ b/app/src/main/res/layout/home_fragments.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FCook">
+    tools:context=".Fragments.FCook">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
